# elvira

./: CMakeLists.txt  README.md  notes.md
elvira/: compositor.cpp  compositor.hpp
elvira/output/: output.hpp
elvira/scene/: scenegraph.cpp  scenegraph.hpp
elvira/util/: box.cpp  box.hpp  macros.hpp
